--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,7 +8,7 @@ ARG NODE_VERSION="none"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
 
 RUN export DEBIAN_FRONTEND=noninteractive
-RUN apt-get --allow-untrusted update 
+RUN apt-get update 
 RUN apt-get install -y vim
 RUN apt-get install -y libc-client-dev libfreetype6-dev libjpeg62-turbo-dev libpng-dev
 
