--- a/.github/workflows/main_dartscalendar.yml
+++ b/.github/workflows/main_dartscalendar.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Modify base path html
         run: sed -i 's/<base href="\/" \/>/<base href="\/dartscalendar\/" \/>/g' dartscalendar/index.html
         
-      - name: Modify base path html
-        run: sed -i 's/<base href="\/" \/>/<base href="\/dartscalendar\/" \/>/g' dartscalendar/index.html
+      - name: Modify base path php
+        run: sed -i 's/<base href="\/" \/>/<base href="\/dartscalendar\/" \/>/g' dartscalendar/calendar.php
         
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
